# crate-digger

./: .gitignore  Dockerfile  MVP.md  README.md  pyproject.toml  pytest.ini  requirements.txt  test.py
crate_digger/: app.py  efficient_requests.py  lastfm_requests.py  main.py  query_api.py
docs/database/: database.puml
scripts/: get_music_brainz_sample.py
src/: efficient_requests.py  lastfm_requests.py  main.py  music_brainz_requests.py
tests/: lastfm_requests_test.py  test_api.py  test_lastfm_requests.py  test_query.py
