[project]
name = "crate-digger"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "carterwward", email = "carterward4@gmail.com"},
]
dependencies = [
    "requests==2.31.0",
]
requires-python = "==3.11.*"
readme = "README.md"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
app = "crate_digger/app.py"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "black>=24.10.0",
]
